# kabu

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  book.toml  config.example.toml  deny.toml
.github/workflows/: book.yml  ci.yml
book/: architecture.md  examples.md  introduction.md
book/architecture/: components.md  node_system.md
crates/broadcast/accounts/: Cargo.toml
crates/broadcast/accounts/src/: lib.rs
crates/broadcast/accounts/src/accounts_monitor/: account_monitor_component.rs
crates/broadcast/accounts/src/signers/: initialize_actor.rs  mod.rs  signers_component.rs
crates/broadcast/broadcaster/src/: flashbots.rs
crates/core/block-history/: Cargo.toml
crates/core/block-history/src/: block_history_actor.rs  block_history_actor_test.rs
crates/core/blockchain/: Cargo.toml
crates/core/blockchain/src/: app_state.rs  blockchain.rs  blockchain_state.rs  blockchain_tokens.rs  lib.rs  strategy.rs
crates/core/components/: Cargo.toml
crates/core/components/src/: builder.rs  composite.rs  dependencies.rs  lib.rs  mev_components.rs  runtime.rs  traits.rs
crates/core/config/: Cargo.toml
crates/core/config/src/: config_loader.rs  kabu_config.rs  lib.rs
crates/core/mempool/: Cargo.toml
crates/core/mempool/src/: mempool_builder.rs  mempool_component.rs
crates/core/node/: Cargo.toml
crates/core/node/src/: builder.rs  context.rs  defaults.rs  lib.rs  node.rs  signer.rs  traits.rs
crates/core/router/: Cargo.toml
crates/core/router/src/: swap_router_component.rs
crates/defi/abi/src/: abi_helpers.rs
crates/defi/address-book/src/: lib.rs
crates/defi/health-monitor/: Cargo.toml
crates/defi/health-monitor/src/: metrics_recorder_actor.rs  pool_health_monitor.rs  state_health_monitor.rs  stuffing_tx_monitor.rs
crates/defi/market/: Cargo.toml
crates/defi/market/src/: history_pool_loader_component.rs  lib.rs  logs_parser.rs  new_pool_actor.rs  pool_loader_actor.rs  required_pools_actor.rs
crates/defi/pools/: Cargo.toml
crates/defi/pools/src/: curvepool.rs  maverickpool.rs  pancakev3pool.rs  uniswapv2pool.rs  uniswapv3pool.rs
crates/defi/preloader/: Cargo.toml
crates/defi/preloader/src/: lib.rs  preloader_actor.rs
crates/defi/price/src/: price_actor.rs
crates/defi/uniswap-v3-math/src/: bit_math.rs  full_math.rs  liquidity_math.rs  sqrt_price_math.rs  swap_math.rs  tick_bitmap.rs  tick_math.rs  unsafe_math.rs
crates/evm/db/benches/: benchmark.rs
crates/evm/db/src/: alloydb.rs  database_loom.rs  fast_cache_db.rs  kabu_db.rs  kabu_db_helper.rs
crates/evm/utils/src/: evm.rs  evm_tx_env.rs  remv_db_direct_access.rs  reth_types.rs  revm_balances.rs
crates/execution/estimator/: Cargo.toml
crates/execution/estimator/src/: evm.rs  hardhat.rs
crates/execution/multicaller/src/: deploy.rs  lib.rs  multicaller_encoder.rs  swap_encoder.rs  (+2 more)
crates/metrics/src/: influxdb_actor.rs
crates/node/exex/: Cargo.toml
crates/node/json-rpc/: Cargo.toml
crates/node/reth-api/: Cargo.toml
crates/node/reth-api/src/: lib.rs  provider_wrapper.rs  traits.rs
crates/rpc/handler/: Cargo.toml
crates/rpc/state/: Cargo.toml
crates/strategy/backrun/: Cargo.toml
crates/strategy/merger/: Cargo.toml
crates/types/blockchain/: Cargo.toml
crates/types/entities/: Cargo.toml
crates/types/events/: Cargo.toml
crates/types/market/: Cargo.toml
testing/backtest-runner/: Cargo.toml  test_18498188.toml  test_19101578.toml  test_20935488.toml  test_20937428.toml  test_21063544.toml
testing/backtest-runner/benches/: benchmark.rs
testing/backtest-runner/src/: flashbots_mock.rs  main.rs
testing/nodebench/src/: main.rs
testing/replayer/src/: main.rs
(+91 files in other folders)
