[package]
name = "kabu-node-reth-api"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
eyre.workspace = true
futures-util.workspace = true
tokio.workspace = true
tracing.workspace = true

# alloy
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-pubsub.workspace = true
alloy-transport.workspace = true

# reth
reth-chain-state = { workspace = true, features = ["serde"] }
reth-ethereum-primitives.workspace = true
reth-execution-types.workspace = true
reth-node-types.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-storage-api.workspace = true
reth-storage-rpc-provider.workspace = true
reth-tasks.workspace = true
